# realtime-context-tui

./: .gitignore  Package.swift  README.md  pyproject.toml
Sources/AudioTap/: FrameEncoder.swift  MicCapture.swift  Resampler.swift  SocketServer.swift  SystemAudioCapture.swift  main.swift
Tests/: conftest.py  test_answerer.py  test_audio_tap.py  test_classifier.py  test_events.py  test_retriever.py  test_session_finder.py  test_session_picker.py  test_transcribe.py  test_ui.py
Tests/AudioTapTests/: FrameEncoderTests.swift  ResamplerTests.swift  SmokeTests.swift  SocketServerTests.swift
docs/superpowers/plans/: 2026-04-15-audio-tap.md  2026-04-15-orchestrator-and-tui.md  2026-04-15-picker-and-navigation.md  2026-04-15-rag-pipeline.md  2026-04-15-self-coach.md
docs/superpowers/specs/: 2026-04-15-realtime-context-tui-design.md
scripts/: claude_stream_diag.py  dg_diag.py  smoke.py
src/rctx/: __init__.py  __main__.py  answerer.py  audio_tap.py  classifier.py  events.py  orchestrator.py  retriever.py  session_finder.py  session_picker.py  transcribe.py  ui.py
