[project]
name = "rctx"
version = "0.0.1"
description = "Realtime context TUI: live audio transcription + RAG over Claude Code history"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "textual>=0.80.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
rctx = "rctx.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rctx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["Tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 110
target-version = "py312"
